--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# VSCode
+.vscode/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Firebase
+firebase-debug.log
+
+# Public uploads (if any)
+public/uploads/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
