--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "firebase": "^12.2.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+  "next": "13.4.19",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+  "eslint": "8.56.0",
+  "eslint-config-next": "13.4.19",
     "tailwindcss": "^4"
   }
 }
