--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "next dev",
-  "build": "next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -12,16 +12,17 @@
     "firebase": "^12.2.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
-  "next": "13.4.19",
-  "react": "18.2.0",
-  "react-dom": "18.2.0",
+    "next": "^15.5.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-  "eslint": "8.56.0",
-  "eslint-config-next": "13.4.19",
+    "autoprefixer": "^10.4.21",
+    "eslint": "8.56.0",
+    "eslint-config-next": "13.4.19",
     "tailwindcss": "^4"
   }
 }
